Update relative font-sizes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <main>
-        <section id="bandeau-accueil">
+        <section class="white-font" id="bandeau-accueil">
             <h2>ASSOCIATION PARTAGEN92</h2>  
             <div class="cta">
                 <button id="donner">DONNER</button>   
@@ -66,8 +66,8 @@
             </div>
         </section>
 
-        <section id="stats">
-           <h2 class="big-title">A PROPOS DE L' ASSOCIATION PARTAGEN92 </h2> 
+        <section class="white-font" id="stats">
+           <h2 class="big-title">A PROPOS DE L'ASSOCIATION </h2> 
            <p>
             PARTAGEN92 est une association loi 1901, à but non lucratif d’aide les personnes qui vivant dans des situations de précarité, créée en août 2017 Objectifs Aider les personnes défavorisées, tant sur le plan moral que matériel, dans la perspective d’améliorer leur quotidien. Développer et participer à des actions de sensibilisation sanitaires, sociales et éducatifs, des actions de partenariat entre associations respectueuses des valeurs défendues par l’association PARTAGEN92 et conformes aux présents statuts, des actions de soutien scolaire, de soutien social et médical à différents projets humanitaires ; Oeuvrer en faveur des enfants orphelins, vulnérables et abandonnées ; développer son action notamment en faveur des pays d’Afrique
            </p>
