--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PartaGen92 - Accueil</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
         <nav>
             <ul>
                 <li>Accueil</li>
-                <li>Actualités</li>
+                <li>Actualité</li>
                 <!-- <li>Blog</li> -->
                 <li>Participer</li>
                 <li>Contact</li>
@@ -22,6 +23,7 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section class="white-font" id="bandeau-accueil">
             <h2>ASSOCIATION PARTAGEN92</h2>  
@@ -72,7 +74,7 @@
             PARTAGEN92 est une association loi 1901, à but non lucratif d’aide les personnes qui vivant dans des situations de précarité, créée en août 2017 Objectifs Aider les personnes défavorisées, tant sur le plan moral que matériel, dans la perspective d’améliorer leur quotidien. Développer et participer à des actions de sensibilisation sanitaires, sociales et éducatifs, des actions de partenariat entre associations respectueuses des valeurs défendues par l’association PARTAGEN92 et conformes aux présents statuts, des actions de soutien scolaire, de soutien social et médical à différents projets humanitaires ; Oeuvrer en faveur des enfants orphelins, vulnérables et abandonnées ; développer son action notamment en faveur des pays d’Afrique
            </p>
            <div id="percent">
-              <h4>BENEVOLAT</h4> 
+              <h4>BÉNÉVOLAT</h4> 
               <p>100 %</p>
               <h4>SOLIDARITÉ</h4> 
               <p>100 %</p>
@@ -83,8 +85,17 @@
            </div>
         </section>
 
+        <section id="news">
+
+        </section>
 
     </main>
+
+    <footer>
+        <p><i class="fas fa-map-marker-alt"></i>23 rue Victor Hugo 92230 Gennevilliers</p>
+        <p><i class="fas fa-paper-plane"></i>partagen92@gmail.com</p>
+        <p><i class="fas fa-phone"></i>+33 6 48 11 44 06</p>
+    </footer>
 
 
 </body>
