Add network section

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <h2>ASSOCIATION PARTAGEN92</h2>  
             <div class="cta">
                 <button id="donner">DONNER</button>   
-                <button id="adherer">ADHERER</button>        
-   
+                <button id="adherer">ADHERER</button>       
             </div>    
+            <p id="quote">Parmi les meilleures des œuvres c’est d’introduire la joie dans le cœur d’un croyant, que ce soit en lui donnant de quoi se vêtir ou en remplissant son estomac ou en lui réglant son affaire</p>
         </section>
 
         <section id="objectifs">
@@ -87,6 +87,13 @@
 
         <section id="news">
 
+        </section>
+
+        <section id="network">
+            <a href="https://www.youtube.com/channel/UCjkJxKUhConqWHbNwFEL88w/featured"  target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
+            <a href="https://twitter.com/partagen92" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter-square"></i></a>
+            <a href="https://www.facebook.com/Partagen92-325832614508122/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.instagram.com/partagen92/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
         </section>
 
     </main>
