--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>PartaGen92 - Accueil</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/logo32x32.jpg" sizes="32x32">
+    <link rel="icon" href="images/logo192x192.jpg" sizes="192x192">
+    <link rel="apple-touch-icon" href="images/logo180x180.jpg">
 </head>
 <body>
 
