Update baniere hover and buttons

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="white-font" id="bandeau-accueil">
             <h2>ASSOCIATION PARTAGEN92</h2>  
             <div class="cta">
-                <button id="donner">DONNER</button>   
+                <button id="donner" class="btn-grad">DONNER</button>   
                 <button id="adherer">ADHERER</button>       
             </div>    
             <p id="quote">Parmi les meilleures des œuvres c’est d’introduire la joie dans le cœur d’un croyant, que ce soit en lui donnant de quoi se vêtir ou en remplissant son estomac ou en lui réglant son affaire</p>
