--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PartaGen92 - Accueil</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/logo32x32.jpg" sizes="32x32">
     <link rel="icon" href="images/logo192x192.jpg" sizes="192x192">
     <link rel="apple-touch-icon" href="images/logo180x180.jpg">
+    <title>PartaGen92 - Accueil</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -29,12 +32,13 @@
 
     <main>
         <section class="white-font" id="bandeau-accueil">
-            <h2>ASSOCIATION PARTAGEN92</h2>  
+            <h2>ASSOCIATION PARTAGEN92</h2> 
+            <p id="quote">Parmi les meilleures des œuvres c’est d’introduire la joie dans le cœur d’un croyant, que ce soit en lui donnant de quoi se vêtir ou en remplissant son estomac ou en lui réglant son affaire</p> 
             <div class="cta">
-                <button id="donner" class="btn-grad">DONNER</button>   
+                <button id="donner">DONNER</button>   
                 <button id="adherer">ADHERER</button>       
             </div>    
-            <p id="quote">Parmi les meilleures des œuvres c’est d’introduire la joie dans le cœur d’un croyant, que ce soit en lui donnant de quoi se vêtir ou en remplissant son estomac ou en lui réglant son affaire</p>
+
         </section>
 
         <section id="objectifs">
