add navbar to other pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 
@@ -20,11 +21,11 @@
         <img src="images/logo-partagen-no-bg-100px.png" alt="">
         <nav>
             <ul>
-                <li>Accueil</li>
+                <li><a href="index.html">Accueil</a></li>
                 <li>Actualité</li>
                 <!-- <li>Blog</li> -->
                 <li>Participer</li>
-                <li>Contact</li>
+                <li><a href="contact.html">Contact</a></li>
                 <li>Boutique</li>
             </ul>
         </nav>
@@ -33,7 +34,7 @@
     <main>
         <section class="white-font" id="bandeau-accueil">
             <h2>ASSOCIATION PARTAGEN92</h2> 
-            <p id="quote">Parmi les meilleures des œuvres c’est d’introduire la joie dans le cœur d’un croyant, que ce soit en lui donnant de quoi se vêtir ou en remplissant son estomac ou en lui réglant son affaire</p> 
+            <p id="quote">" Parmi les meilleures des œuvres c’est d’introduire la joie dans le cœur d’un croyant, que ce soit en lui donnant de quoi se vêtir ou en remplissant son estomac ou en lui réglant son affaire "</p> 
             <div class="cta">
                 <button id="donner">DONNER</button>   
                 <button id="adherer">ADHERER</button>       
@@ -45,7 +46,7 @@
             <h2 class="big-title">NOS OBJECTIFS</h2>
             <div id="objectif-items">
                 <div id="orphelins">
-                    <img src="images/orphelin-hand.PNG" alt="">
+                    <a href="https://www.helloasso.com/associations/partagen92/collectes/soutien-aux-orphelins-et-aux-necessiteux?fbclid=IwAR1fT6Y898YBNdAN8YfureSEe-6UO4R-JZ2a_d36gIHR4porwlZzGyXPMW0" title="Parrainer un orphelin"><img src="images/orphelin-hand.PNG" alt=""></a>
                     <h3>ORPHELINS</h3>
                     <p>
                         Organiser des prises en charge d’orphelins avec des partenaires associatifs: dans le but d’apporter un soutien moral et social à l’enfant dans son cadre familial
@@ -59,7 +60,7 @@
                     </p>
                 </div>
                 <div id="renovation">
-                    <img src="images/tigoudzine-masjid.PNG" alt="">
+                    <a href="https://www.helloasso.com/associations/partagen92/collectes/renovation-de-la-mosquee-tigoudzine" title="Renovation d'une mosquée"><img src="images/tigoudzine-masjid.PNG" alt=""></a>
                     <h3>TIGOUDZINE</h3>
                     <p>
                         Les travaux ont repris depuis le 29 mai 2021 après une longue durée d arrêt forcés depuis le 21 mars 2020. Nous continuons de solliciter votre aide pour finaliser ce projet qui est presque à la moitié de sa réalisation
