--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,9 @@
 
     <main id="main-form">
 
-        <form  method="post" >
+        <form  method="post" action="form.php" > 
+ 
+        <!-- <form  method="post" action="https://formsubmit.co/0282df5d11b28f534fdfb40ad17aceb1" > -->
 
             <div id="form-name">
 
@@ -52,7 +54,7 @@
             <div id="form-comment">
 
                 <div class="">
-                    <textarea type="text" name="mail" id="mail" placeholder="Commentaire"></textarea>
+                    <textarea type="text" name="comment" id="comment" placeholder="Commentaire"></textarea>
                 </div>
             </div>
     
